--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-logging.level.org.springframework.web=DEBUG
-management.security.enabled=false
-
-# App Context Path
+# Context
 server.port=8000
-server.context-path=/tim-bookstore
+server.servlet.context-path=/tim-bookstore
 
-# DataSource Configuration
+# Security
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
+
+# Logging
+logging.level.org.springframework.web=DEBUG
+
+
+#DataSource Configuration
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.datasource.url=jdbc:sqlserver://FSASYDSDBSTG1.foxsports.com.au;databaseName=foxsportsstats_soccer
 #spring.datasource.username=sapi
