--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,10 @@
         </dependency>
 
         <!-- db -->
-<!--
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>${sqlserver.version}</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
--->
 
         <!-- util -->
         <dependency>
