--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@ logging.level.org.springframework.web=DEBUG
 
 
 #DataSource Configuration
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://FSASYDSDBSTG1.foxsports.com.au;databaseName=foxsportsstats_soccer
-#spring.datasource.username=sapi
-#spring.datasource.password=sapi
-#spring.jpa.show-sql=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://aws-rds-mysql-sample.c59fqnnulivn.ap-southeast-2.rds.amazonaws.com:3306/bookstore
+spring.datasource.username=master
+spring.datasource.password=masternotroot
+spring.jpa.show-sql=true
 
 #Connection Pool Configuration
-#spring.datasource.tomcat.max-wait=20000
-#spring.datasource.tomcat.max-active=50
-#spring.datasource.tomcat.max-idle=20
-#spring.datasource.tomcat.min-idle=15
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15
